--- a/Basic-Portfolio/index.html
+++ b/Basic-Portfolio/index.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Ryan Weiss</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,11 +25,11 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/me.jpg" class="auth-image" alt="Ryan Weiss">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+      <p>Hello everyone. I am not really sure what I am doing. This is just a test to see if I understand what I am coding here. Just move along. Nothing to see here.</p>
 
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+      <p>I started watching a new show today. That brings my total shows that I am watching to around seven. I had to stop watching a few. Didn't have the time. The rest of this sentence is just filler text.</p>
 
     </section>
 
@@ -46,7 +46,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      &copy; TWO THOUSAND SEVENTEEN&nbsp;&nbsp;|&nbsp;&nbsp;RYAN WEISS
     </div>
   </footer>
 </body>
